--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>
         Monserrat Monge
     </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 </head>
 <body>
-    <ul>
-        <li>
-        Inicio
-        </li>
-        <li>
-            Junio
-        </li>
-    </ul>
+    <main class="container-fluid" >
+        <ul>
+            <li>
+                Inicio
+            </li>
+            <li>
+                Junio
+            </li>
+        </ul>
+        <div class="alert alert-primary" role="alert">
+            This is a primary alert—check it out!
+        </div>
+        <div class="row">
+            <div class="col-xs-4 col">
+                Columna 1
+            </div>
+            <div class="col-xs-4 col">
+                Columna 2
+            </div>
+            <div class="col-xs-4 col">
+                Columna 3
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col">
+                Columna 4
+            </div>
+            <div class="col-xs-12 col">
+                Columna 5
+            </div>
+            <div class="col-xs-12 col">
+                Columna 6
+            </div>
+        </div>
+    </main>
 </body>
 </html>
