--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <title>
         Monserrat Monge
     </title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
     <main class="container-fluid" >
@@ -16,28 +20,28 @@
                 Junio
             </li>
         </ul>
-        <div class="alert alert-primary" role="alert">
+        <div class="alert alert-info" role="alert">
             This is a primary alert—check it out!
         </div>
         <div class="row">
-            <div class="col-xs-4 col">
+            <div class="col-xs-8 col-sm-4 col-md-4">
                 Columna 1
             </div>
-            <div class="col-xs-4 col">
+            <div class="col-xs-2 col-sm-4 col-md-4">
                 Columna 2
             </div>
-            <div class="col-xs-4 col">
+            <div class="col-xs-2 col-sm-4 col-md-4">
                 Columna 3
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col">
+            <div class="col-xs-12 col-sm-12 col-md-4">
                 Columna 4
             </div>
-            <div class="col-xs-12 col">
+            <div class="col-xs-12 col-sm-12 col-md-4">
                 Columna 5
             </div>
-            <div class="col-xs-12 col">
+            <div class="col-xs-12 col-sm-12 col-md-4">
                 Columna 6
             </div>
         </div>
