--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>
         Monserrat Monge
     </title>
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <main class="container-fluid" >
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li> <a href="./index.html"> Inicio </a></li>
+                    <li> <a href="./Casa.html"> Casa </a></li>
+                    <li> <a href="./Departamentos.html"> Departamento</a></li>
+                    <li> <a href="./Vacas.html"> Vacaciones</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <main class="container-fluid">
         <ul>
             <li>
                 Inicio
@@ -25,9 +45,14 @@
         </div>
         <div class="row">
             <div class="col-xs-8 col-sm-4 col-md-4">
-                Columna 1
+                <h2>Columna 1</h2>
+                <ul>
+                    <li> <a href="./Casa.html"> Casa </a></li>
+                    <li> <a href="./Departamentos.html"> Departamento</a></li>
+                    <li> <a href="./Vacas.html"> Vacaciones</a></li>
+                </ul>
             </div>
-            <div class="col-xs-2 col-sm-4 col-md-4">
+            <div class="col-xs-2 col-sm-4 col-md-4 ColumnaMarvin">
                 Columna 2
             </div>
             <div class="col-xs-2 col-sm-4 col-md-4">
@@ -47,4 +72,5 @@
         </div>
     </main>
 </body>
+
 </html>
