--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
-            
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
@@ -33,12 +32,8 @@
     </nav>
     <main class="container-fluid">
         <ul>
-            <li>
-                Inicio
-            </li>
-            <li>
-                Junio
-            </li>
+            <li>Inicio</li>
+            <li>Junio</li>
         </ul>
         <div class="alert alert-info" role="alert">
             This is a primary alert—check it out!
