--- a/home.html
+++ b/home.html
@@ -5,12 +5,44 @@
     <title>
         Revista Perfil
     </title>
+       <!-- Latest compiled and minified CSS -->
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+       crossorigin="anonymous">
+   <link rel="stylesheet" href="./styles.css">
+   <!-- Latest compiled and minified JavaScript -->
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+       crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-    <ul>
-        <li>+Leído</li>
-        <li>+Reciente</li>
-    </ul>
+    <div class="lista1">
+        <ul class="nav nav-pills">
+            <li class="active"> <a href="#">Inicio</a></li>
+            <li> <a href="#">+Leido</a></li>
+            <li> <a href="#">+Reciente</a></li>
+            <div class="lista1">
+                <input type="submit" value="Buscar">
+                 <input type="text">
+            </div>
+        </ul>
+    </div>
+    <div class="lista2">   
+            <nav class="navbar navbar-default navbar-static-top">
+                    <div class="container-fluid">
+                            <ul class="nav navbar-nav">
+                                    <li><a href="#"></li>
+                                    <li><a href="#">Mujer</li>
+                                    <li><a href="#">Vida </li>
+                                    <li><a href="#">Belleza </li>
+                                   <li><a href="#">Bienestar</li>
+                             </ul>
+                    </div>
+                  </nav>
+    </div>
 </body>
+
+
+
+
