--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 </head>
-
 <body>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -23,7 +22,7 @@
                     <li> <a href="./index.html"> Inicio </a></li>
                     <li> <a href="./Casa.html"> Casa </a></li>
                     <li> <a href="./Departamentos.html"> Departamento</a></li>
-                    <li> <a href="./Vacas.html"> Vacaciones</a></li>
+                    <li> <a href="./home.html"> Vacaciones</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
